no such thing as negative frobenii

--- a/finite.tex
+++ b/finite.tex
@@ -536,9 +536,9 @@ Every formal group law \(+_\phi\) over a \(\Z_{(p)}\)--algebra is naturally isom
 Let \(\G\) be the formal group associated to \(+_\phi\), denote its inherited parameter by \[g_0\co \A^1 \xrightarrow{\cong} \G,\] so that \(\omega_0(x) = (g_0^* \omega)(x) = \sum_{n=0}^\infty a_n x^{n-1} \dx\) is the invariant differential associated to \(+_\phi\).  Our goal is to perturb this coordinate to a new coordinate \(g_\infty\) so that its associated invariant differential has the form \[\sum_{n=0}^\infty a_{p^n} x^{p^n-1} \dx.\]  To do this, we introduce four operators on functions\footnote{Unfortunately, it is standard in the literature to call these operators on ``curves'', which does not fit well with our previous use of the term in \Cref{ComplexBordismChapter}.} \(\A^1 \to \G\):
 \begin{itemize}
 \item Given \(r \in R\), we can define a \index{homothety}\textit{homothety} by rescaling the coordinate by \(r\): \[(\theta_r^* g_0^* \omega)(x) = \omega_0(rx) = \sum_{n=1}^\infty (a_n r^n) x^{n-1} \dx.\]
-\item For \(\ell \in \Z\), we can define a shift operator (or \index{Verschiebung}\textit{Verschiebung}) by \[(V_\ell^* g_0^* \omega)(x) = \omega_0(x^\ell) = \sum_{n=1}^\infty a_n \ell x^{n \ell - 1} \dx.\]
+\item For \(\ell \in \N\), we can define a shift operator (or \index{Verschiebung}\textit{Verschiebung}) by \[(V_\ell^* g_0^* \omega)(x) = \omega_0(x^\ell) = \sum_{n=1}^\infty a_n \ell x^{n \ell - 1} \dx.\]
 \item For \(\ell \in \Z\), we define the \(\ell\)--series to be \[[\ell](g_0(x)) = \overset{\text{\(\ell\) times}}{\overbrace{g_0(x) +_{\G} \cdots +_{\G} g_0(x)}}.\]  We can extend this definition slightly: given an \(\ell \in \Z_{(p)}\), we form the \(\ell\)--series by writing \(\ell\) as a fraction \(\ell = s/t\) and composing the \(s\)--series with the inverse of the \(t\)--series.  The effect on the invariant differential is given by \[([\ell]^* g_0^* \omega)(x) = \ell \omega_0(x) = \sum_{n=1}^\infty \ell a_n x^{n-1} \dx.\]
-\item For \(\ell \in \Z\), we can define a \index{Frobenius}\textit{Frobenius operator}\footnote{There are other definitions of the Frobenius operator which are less mysterious but less explicit.  For instance, it also arises from applying the Verschiebung to the character group (or ``Cartier dual'') of \(\G\).} by \[F_\ell g_0(x) = \sumG_{j=1}^\ell g_0(\zeta_\ell^j x^{1/\ell}),\] where \(\zeta_\ell\) is a primitive \(\ell\){\th} root of unity.  Because this formula is Galois--invariant in choice of primitive root, it actually expands to a series which lies over the ground ring (without requiring an extension by \(\zeta_\ell\) or by \(z^{1/\ell}\)).  Using the standard identity \[\sum_{j=1}^\ell \zeta_\ell^{jn} = \begin{cases}\ell & \text{if \(\ell \mid n\)}, \\ 0 & \text{otherwise}, \end{cases}\] we can explicitly compute the behavior of \(F_\ell\) on the invariant differential: \[(F_\ell^* g_0^* \omega)(x) = \sum_{n=1}^\infty a_{n \ell} x^{n-1} \dx.\]
+\item For \(\ell \in \N\), we can define a \index{Frobenius}\textit{Frobenius operator}\footnote{There are other definitions of the Frobenius operator which are less mysterious but less explicit.  For instance, it also arises from applying the Verschiebung to the character group (or ``Cartier dual'') of \(\G\).} by \[F_\ell g_0(x) = \sumG_{j=1}^\ell g_0(\zeta_\ell^j x^{1/\ell}),\] where \(\zeta_\ell\) is a primitive \(\ell\){\th} root of unity.  Because this formula is Galois--invariant in choice of primitive root, it actually expands to a series which lies over the ground ring (without requiring an extension by \(\zeta_\ell\) or by \(z^{1/\ell}\)).  Using the standard identity \[\sum_{j=1}^\ell \zeta_\ell^{jn} = \begin{cases}\ell & \text{if \(\ell \mid n\)}, \\ 0 & \text{otherwise}, \end{cases}\] we can explicitly compute the behavior of \(F_\ell\) on the invariant differential: \[(F_\ell^* g_0^* \omega)(x) = \sum_{n=1}^\infty a_{n \ell} x^{n-1} \dx.\]
 \end{itemize}
 Stringing these together, for \(p \nmid \ell\) we have \[([1/\ell]^* V_\ell^* F_\ell^* g_0^* \omega)(x) = \sum_{n=1}^\infty a_{n \ell} x^{n \ell - 1} \dx.\]  Hence, we can iterate over primes \(\ell \ne p\), and for two adjacent such primes \(\ell' > \ell\) we consider the perturbation \[g_{\ell'} = g_\ell -_{\G} [1/\ell] V_\ell F_\ell g_\ell.\]  Each of these differences gives a parameter according to \Cref{InverseFunctionTheoremForFVars}, and the first possible nonzero term appears in degree \(\ell\), hence the coefficients stabilize linearly in \(\ell\).  Passing to the limit thus gives a new parameter \(g_\infty\) on the same formal group \(\G\), but now with the \(p\)--typicality property.
 \end{proof}
@@ -554,7 +554,7 @@ This a quick induction: set \(y = y_\infty\) and select the unit \(b_1\) such th
 Let \(x\) be some parameter for a formal group \(\G\), and suppose that the minimal index so that the invariant differential is not integrable in that degree takes the form \(p^d-1\).  Then \(\G\) has height \(d\).
 \end{corollary}
 \begin{proof}
-Take \(x\) to be a parameter as in the statement.  Although \textit{a priori} the partial logarithm \(\ell\) of \Cref{HeightDefn} may not be the partial integral of the invariant differential associated to \(x\), it is the partial logarithm associated to \emph{some} parameter \(y\), and we use the preceding Lemma to re-express \(y\) as \[y = \sumfgl{\G}_{n=0}^\infty \theta_{b_n}^* V_n^* x.\]  Consider the invariant differential associated to \(y\), expressed in terms of \(x\) and \(dx\), using the rules described in the proof of \Cref{EveryFGLIsPTypical}: \[\omega_y = \sum_{j=0}^\infty \theta_{b_j}^* V_j^* \left(\sum_{n=0}^\infty a_{p^n} x^{p^n-1} \dx\right) = \sum_{j=0}^\infty \sum_{n=0}^\infty j a_{p^n} b_j^{jp^n-1} x^{jp^n-1} \dx.\]  The terms in the critical degree \((p^d-1)\) take the form \[\sum_{n=0}^d p^{d-n} a_{p^n} b_{p^{d-n}}^{p^d-1} x^{p^d-1} \dx.\]  The term \(a_{p^n}\) is assumed to have \(p\)--adic valuation at least \(n\) for \(n < d\), and hence \(p^{d-n}a_{p^n}\) has \(p\)--adic valuation at least \(d\) for \(n < d\).  Since in the case \(n = d\) the coefficient \(a_{p^d}\) has assumed to have \(p\)--adic valuation strictly less than \(d\), this sum must also have \(p\)--adic valuation strictly less than \(d\).  In particular, this shows that the radius of convergence of the partial logarithm is at most \(p^d-1\), and the existence of \(x\) itself shows that it is at least \(p^d-1\).
+Take \(x\) to be a parameter as in the statement.  Although \textit{a priori} the partial logarithm \(\ell\) of \Cref{HeightDefn} may not be the partial integral of the invariant differential associated to \(x\), it is the partial logarithm associated to \emph{some} parameter \(y\), and we use the preceding Lemma to re-express \(y\) as \[y = \sumfgl{\G}_{j=0}^\infty \theta_{b_j}^* V_j^* x.\]  Consider the invariant differential associated to \(y\), expressed in terms of \(x\) and \(dx\), using the rules described in the proof of \Cref{EveryFGLIsPTypical}: \[\omega_y = \sum_{j=0}^\infty \theta_{b_j}^* V_j^* \left(\sum_{n=0}^\infty a_{p^n} x^{p^n-1} \dx\right) = \sum_{j=0}^\infty \sum_{n=0}^\infty j a_{p^n} b_j^{jp^n-1} x^{jp^n-1} \dx.\]  The terms in the critical degree \((p^d-1)\) take the form \[\sum_{n=0}^d p^{d-n} a_{p^n} b_{p^{d-n}}^{p^d-1} x^{p^d-1} \dx.\]  The term \(a_{p^n}\) is assumed to have \(p\)--adic valuation at least \(n\) for \(n < d\), and hence \(p^{d-n}a_{p^n}\) has \(p\)--adic valuation at least \(d\) for \(n < d\).  Since in the case \(n = d\) the coefficient \(a_{p^d}\) has assumed to have \(p\)--adic valuation strictly less than \(d\), this sum must also have \(p\)--adic valuation strictly less than \(d\).  In particular, this shows that the radius of convergence of the partial logarithm is at most \(p^d-1\), and the existence of \(x\) itself shows that it is at least \(p^d-1\).
 \end{proof}
 
 \begin{corollary}\label{FGLHeightIsAnInteger}
