--- a/unknowns.tex
+++ b/unknowns.tex
@@ -124,7 +124,7 @@ First, one can ask this question just considering \(MU\) as a ring spectrum.  Fr
 \end{enumerate}
 For \(R = \S\), this is precisely the role that the \(R\)--algebra \(S = MU\) and the \(S\)--algebras \(S_d = E(d)\) play.\footnote{A potentially useful observation is that this does not appear to be a question in the domain of highly structured ring spectra.  After all, the ring spectra \(E(d)\) are not known to be \(E_\infty\).}
 
-There are some obvious restrictions on the \(R\)--algebra \(S\): for instance, because we intend to use \(S\) to form a context, we require that \(\pi_* S\) (and \(\pi_* S^{\sm_R (j)}\) generally) be even.  There are, in fact, two results in the literature that shed light on exactly this requirement.  First, Priddy showed that by iteratively attaching cells to the \(p\)--local sphere in order to ensure that it has only even-dimensional homotopy, one arrives at \(BP\)~\cite{Priddy}.  More recently, Beardsley showed that \(MU\) arises similarly by attaching certain \(A_\infty\)--algebra cells to kill the odd homotopy on the integral sphere~\cite{Beardsley}.\footnote{He also identifies certain intermediate spectra in this process as the spectra \(X(n)\) that arise for Devinatz, Hopkins, and Smith in their proof of the nilpotence conjectures~\cite{DHS}.}  It would be satisfying to understand whether some construction like this holds in any sort of generality.
+There are some obvious restrictions on the \(R\)--algebra \(S\): for instance, because we intend to use \(S\) to form a context, we require that \(\pi_* S\) (and \(\pi_* S^{\sm_R (j)}\) generally) be even.  There are, in fact, two results in the literature that shed light on exactly this requirement.  First, Priddy showed that by iteratively attaching cells to the \(p\)--local sphere in order to ensure that it has only even-dimensional homotopy, one arrives at \(BP\)~\cite{Priddy}.  More recently, Beardsley showed that \(MU_{(p)}\) arises similarly by inductively attaching \(A_\infty\)--algebra cells to kill the odd homotopy on the \(p\)--local sphere~\cite{Beardsley}.\footnote{He also identifies certain intermediate spectra in this process as the spectra \(X(n)\) that arise for Devinatz, Hopkins, and Smith in their proof of the nilpotence conjectures~\cite{DHS}.  He also shows that this procedure works integrally, but there is lingering unexplained geometric information in how the cells are attached.}  It would be satisfying to understand whether some construction like this holds in any sort of generality.
 
 For a second perspective, using the adjunction \[\CatOf{RingSpectra}(MU, E) \cong \CatOf{Spectra}_{\S/}(\Susp^{-2} \Susp^\infty \CP^\infty, E),\] we might ask: what's so special about the space \(\CP^\infty\)?  Much of the contents of this book supports the following perspective: given a space \(X\), we consider the \(E_\infty\)--ring pro-spectrum \(DX_+ = \{F(X_\alpha, \S)\}_\alpha\).  Because each \(X_\alpha\) is a compact object, base-change along the unit map \(\eta\co \S \to E\) is computed by the following formula:
 \begin{align*}
