kill undefined references

--- a/sigma.tex
+++ b/sigma.tex
@@ -583,7 +583,7 @@ B \arrow["j"]{r} \arrow["\alpha"]{d} \& P \arrow["q"]{r} \arrow["y"]{d} \& T \ar
 \Susp H\Z/p^j \arrow["\beta_j"]{r} \& \Susp^2 H\Z \arrow["p^j"]{r} \& \Susp^2 H\Z \arrow["\rho"]{r} \& \Susp^2 H\Z/p^j,
 \end{tikzcd}
 \end{center}
-where \(y\) is the standard Euler class in \(H^2 \CP^\infty\) and the first block commutes because the bottom row is the stabilization of the top row; \(w\) is the Thom class associated to \(T(\L^{\otimes p^j})\) and the middle block commutes because it witnesses the \(H\Z\)--analogue of the statements expressed by \Cref{MUConvertsTorsionPointsToTorsionPoints} and \Cref{KtheoryConvertsTorsionToTorsion}; and the last block commutes because \([B, \Sigma^2 H\Z] = 0\) and because the other two do.  In particular, an application of the right-most block gives}
+where \(y\) is the standard Euler class in \(H^2 \CP^\infty\) and the first block commutes because the bottom row is the stabilization of the top row; \(w\) is the Thom class associated to \(T(\L^{\otimes p^j})\) and the middle block commutes because it witnesses the \(H\Z\)--analogue of \Cref{KtheoryConvertsTorsionToTorsion}; and the last block commutes because \([B, \Sigma^2 H\Z] = 0\) and because the other two do.  In particular, an application of the right-most block gives}
 \beta_j \mu (\alpha \sm \alpha\delta) & = \beta_j \mu (\alpha \sm \rho w). \\
 \intertext{Using the fact that \(\beta_j\) is the cofiber of the ring map \(\rho\), there is a juggle}
 \beta_j \mu (\alpha \sm \rho w) & = \mu(\beta_j \alpha \sm w), \\
