--- a/main.bib
+++ b/main.bib
@@ -1921,6 +1921,17 @@ MRREVIEWER = {Kenneth A. Ribet},
        URL = {http://dx.doi.org/10.1515/9781400881710},
 }
 
+@inproceedings{Kitaev,
+  title={Periodic table for topological insulators and superconductors},
+  author={Kitaev, Alexei},
+  booktitle={AIP Conference Proceedings},
+  volume={1134},
+  number={1},
+  pages={22--30},
+  year={2009},
+  organization={AIP}
+}
+
 @article {KitchlooLaures,
     AUTHOR = {Kitchloo, Nitu and Laures, Gerd},
      TITLE = {Real structures and {M}orava {$K$}-theories},
