extend a B.2 footnote with recent idea about HZ_(2) ^ BU<2k>

--- a/sigma.tex
+++ b/sigma.tex
@@ -785,7 +785,7 @@ The \(p\)--primary residue of the scheme of trivariate symmetric \(2\)--cocycles
 \end{lemma}
 
 \noindent Similar juggling of the Artin--Hasse exponential yields the following multiplicative classification:
-\begin{theorem}[{\cite[Proposition 3.28]{AHSTheoremOfTheCube}}]
+\begin{theorem}[{\cite[Proposition 3.28]{AHSTheoremOfTheCube}}]\label{AHSCalculationOfC3}
 There is an isomorphism \[\Spec \Z_{(p)}[a_d \mid d \ge 3, d \ne 1 + p^t] \times \Spec \Gamma[b_{1 + p^t}] \xrightarrow{} C^3(\G_a; \Gm) \times \Spec \Z_{(p)}.\]
 \end{theorem}
 \begin{proof}[Proof sketch]
