--- a/unknowns.tex
+++ b/unknowns.tex
@@ -74,7 +74,7 @@ Even if \(KO\) and \(\widehat L_2 \TMF\) appear un-geometric, they appear to bel
     \item The homotopy of \(EO_{p-1}\) is known by computations of Hopkins and Miller to contain certain \(\alpha\)--family elements.  Since the homotopy of \(MO[k, \infty)\) agrees with that of the sphere below \(k\) and destroys the \(\alpha\) elements above \(k\), this forces the value of \(k\) to be large enough to accommodate the elements present in \(\pi_* EO_{p-1}\).
     \item Because \(EO_{p-1}\) is local, any orientation of it factors through \(\widehat L_{p-1} MO[k, \infty)\).  The Ravenel--Wilson acyclicity results for Eilenberg--Mac Lane spaces show that the natural map \(\widehat L_{p-1} MO[k, \infty) \to \widehat L_{p-1} MO[p, \infty)\) is an equivalence for any \(k \ge p\).  It follows that such an \(MO[k, \infty)\)--orientation of \(EO_{p-1}\) is equivalent data to an \(MO[p, \infty)\)--orientation.
 \end{itemize}
-For \(p > 3\), these bounds pass through each other and there is no satisfying value of \(k\).  At the same time, because of the tight connection between stable homotopy theory and the Morava \(E\)--theories, this might be read as a failure of the connective bordism spectra \(MO[k, \infty)\) more than a failure of higher real \(K\)--theories.  It is interesting to try to imagine a continuation of the sequence \(MO\), \(MSO\), \(M\Spin\), \(M\String\) which does not suffer from Hovey's negative result.\footnote{Some footholds for the \emph{algebraic} geometry of the large \(k\) case were worked out by me and my coauthors~\cite{HLP}.}\footnote{One suggested continuation of the analogous complex sequence comes from the \(2\)--primary identifications \(BU \simeq Y_1\), \(BSU \simeq Y_2\), and \(BU[6, \infty) \simeq Y_3\), using the notation of \Cref{WilsonSpaces}.}
+For \(p > 3\), these bounds pass through each other and there is no satisfying value of \(k\).  At the same time, because of the tight connection between stable homotopy theory and the Morava \(E\)--theories, this might be read as a failure of the connective bordism spectra \(MO[k, \infty)\) more than a failure of higher real \(K\)--theories.  It is interesting to try to imagine a continuation of the sequence \(MO\), \(MSO\), \(M\Spin\), \(M\String\) which does not suffer from Hovey's negative result.\footnote{Some footholds for the \emph{algebraic} geometry of the large \(k\) case were worked out by me and my coauthors~\cite{HLP}, extending \Cref{AHSCalculationOfC3}.  There is strong evidence that there is an isomorphism $\sheaf O_{C^k(\G_a; \Gm)} \otimes \Z_{(2)} \to H\Z_{(2)}{}_* BU[2k, \infty)$, corresponding to some of the input required by \Cref{Pi3ForCplxOrientableE}.  However, this algebra contains \(2\)--torsion (whose base-change to \(\F_2\) appears to fully account for the complaints raised in \cite[Remark 8.1]{HLP}), which stymies the rest of that proof and hence blocks the analysis for a general complex-orientable cohomology theory.  The ultimate fate of the schematic interpretation of connective complex orientations is presently unknown.}\footnote{One suggested continuation of the analogous complex sequence comes from the \(2\)--primary identifications \(BU \simeq Y_1\), \(BSU \simeq Y_2\), and \(BU[6, \infty) \simeq Y_3\), using the notation of \Cref{WilsonSpaces}.}
 
 
 
