--- a/unknowns.tex
+++ b/unknowns.tex
@@ -209,7 +209,7 @@ The idea is that these kinds of observations can be used to bundle the behavior 
 \end{center}
 allowing for the easy detection of invertible \(\Gamma_d\)--local spectra.\footnote{There are interesting basic open questions about the behavior of the horizontal map \(\operatorname{Pic}(\CatOf{Spectra}_{\Gamma_d}) \to \operatorname{Pic}(\CatOf{QCoh}((\moduli{fg})^\wedge_{\Gamma_d}))\).  Is it injective?  Is it surjective?  It can be shown to be injective in the case of \(p \gg \operatorname{ht} \Gamma\), and it is known to fail to be injective when \(p\) is small---but then the precise degree to which it fails to be injective becomes of interest.  Picard elements in the kernel of this map are called \textit{exotic}, and they are responsible for rotating differentials in certain Adams spectral sequences with cyclic symmetries.}
 
-There is further hope that the analogy to special values of \(L\)--functions can be strengthened to a precise connection: the orders of the \(\G_m\)--local homotopy groups of the sphere (or, equivalently, the orders of the stable image of \(j\) elements) are controlled by Bernoulli denominators, which also appear as the negative special values of the Riemann \(\zeta\)--function.\footnote{It would be truly amazing to have an analogue of the Beilinson conjectures in this topological Langlands program.}  This portends to be more than coincidence: the conjectured \(p\)--adic local Langlands correspondence promises a comparison between certain ``nice'' representations of the groups \(\mathit{GL}_d(\Q_p)\), \(\operatorname{Gal}(\overline{\Q_p} / \Q_p)\), and \(\S_d\) in such a way that the \(L\)--functions naturally associated to each representation are equal across the correspondence.  At \(d = 1\), the relevant spaces of representations are identically equal (and, in particular, the groups \(\S_1\), \(\mathrm{GL}_1(\Q_p)\), and \(\operatorname{Gal}(\overline{\Q_p} / \Q_p)^{\mathrm{ab}}\) are themselves all equal), and the \(L\)--function associated to the \(\S_1\)--representation \(E_{\G_m}(\S^0)\) is, indeed, the Riemann \(\zeta\)--function.  It is rather a lot to hope that this correspondence continues at higher heights, but with the current rate of progress on the \(p\)--adic Langlands correspondence (see, e.g., \cite{KnightThesis}) this promises to soon be testable, if not provable.\footnote{An interesting feature of the local Langlands correspondence is that it has \emph{two} geometric instantiations, stemming from the Lubin--Tate moduli of infinite level and from the \emph{Drinfel'd moduli} of infinite height.  Drinfel'd modules, the constituent poits of the Drinfel'd moduli, have the many desirable properties, but among their stranger properties is that they are naturally positive objects---a situation that a modern homotopy theorist essentially never enters.  Any kind of introduction of equicharacteristic algebraic geometry into homotopy theory would be a welcome invitation and possible point of homotopical contact between these two kinds of halves of the local Langlands program.  (One such place this is coming into view is in the ``ultrachromatic program'' of Barthel, Behrens, Schlank, and Stapleton.)}\footnote{In-progress work of Stapleton and collaborators shows that a version of character theory can be used to convert the $E$--cohomology of a space into a sheaf over the Lubin--Tate moduli of infinite level with an intricate action of a certain large matrix group relevant to the Jacquet--Langlands program.}
+There is further hope that the analogy to special values of \(L\)--functions can be strengthened to a precise connection: the orders of the \(\G_m\)--local homotopy groups of the sphere (or, equivalently, the orders of the stable image of \(j\) elements) are controlled by Bernoulli denominators, which also appear as the negative special values of the Riemann \(\zeta\)--function.\footnote{Generalizations of these phenomena (to larger complexes, to the prime \(2\), and to higher heights) are the subject of work in progress by Salch.}\footnote{It would be truly amazing to have an analogue of the Beilinson conjectures in this topological Langlands program.}  This portends to be more than coincidence: the conjectured \(p\)--adic local Langlands correspondence promises a comparison between certain ``nice'' representations of the groups \(\mathit{GL}_d(\Q_p)\), \(\operatorname{Gal}(\overline{\Q_p} / \Q_p)\), and \(\S_d\) in such a way that the \(L\)--functions naturally associated to each representation are equal across the correspondence.  At \(d = 1\), the relevant spaces of representations are identically equal (and, in particular, the groups \(\S_1\), \(\mathrm{GL}_1(\Q_p)\), and \(\operatorname{Gal}(\overline{\Q_p} / \Q_p)^{\mathrm{ab}}\) are themselves all equal), and the \(L\)--function associated to the \(\S_1\)--representation \(E_{\G_m}(\S^0)\) is, indeed, the Riemann \(\zeta\)--function.  It is rather a lot to hope that this correspondence continues at higher heights, but with the current rate of progress on the \(p\)--adic Langlands correspondence (see, e.g., \cite{KnightThesis}) this promises to soon be testable, if not provable.\footnote{An interesting feature of the local Langlands correspondence is that it has \emph{two} geometric instantiations, stemming from the Lubin--Tate moduli of infinite level and from the \emph{Drinfel'd moduli} of infinite height.  Drinfel'd modules, the constituent poits of the Drinfel'd moduli, have the many desirable properties, but among their stranger properties is that they are naturally positive objects---a situation that a modern homotopy theorist essentially never enters.  Any kind of introduction of equicharacteristic algebraic geometry into homotopy theory would be a welcome invitation and possible point of homotopical contact between these two kinds of halves of the local Langlands program.  (One such place this is coming into view is in the ``ultrachromatic program'' of Barthel, Behrens, Schlank, and Stapleton~\cite{BSS}.)}\footnote{In-progress work of Stapleton and collaborators shows that a version of character theory can be used to convert the $E$--cohomology of a space into a sheaf over the Lubin--Tate moduli of infinite level with an intricate action of a certain large matrix group relevant to the Jacquet--Langlands program.}
 
 
 
