--- a/unknowns.tex
+++ b/unknowns.tex
@@ -328,7 +328,7 @@ Finally there is a substantially different approach to associating algebro-geome
 
 \subsection*{Equivariance}
 
-Since the resolution of the Kervaire invariant one question by Hill, Hopkins, and Ravenel~\cite{HHR}, the field of equivariant homotopy theory has enjoyed a serious revitalization after a rather quiet preceding period.  There is a lot to study here, and most of it is better elucidated elsewhere, but one of the central points of the Hill--Hopkins--Ravenel program is exactly the employ of formal geometry.  Namely, one of their main tools is the moduli of formal \(\Z[\!\!\sqrt{i}]\)--modules, which are formal groups equipped with a certain \(C_8\)--action affecting multiplication by the associated powers of \(\!\!\sqrt{i}\) on the tangent space.  They take as a model for this a certain bouquet of copies of \(MU\), which selects four coordinates on a given formal group, intertwined by this action of \(\!\!\sqrt{i}\).  This approach to this problem has historical precedent: the Kervaire invariant one problem is the \(p = 2\) case of a family of prime-indexed problems, and the versions satisfying \(p \ge 5\) were simultaneously resolved by Ravenel by similar methods with formal \(A\)--modules~\cite{RavenelNonexistenceArfInvariantElts}.  This leaves one case open: the Kervaire problem at \(p = 3\) remains unresolved.  From the perspective of formal \(A\)--modules, this is somewhat predictable: at large primes, a certain governing map is \(p\)--adically continuous, but it fails to be continuous at small primes.\footnote{Behrens gave a talk at the MSRI Hot Topics session on the Kervaire problem in 2010.  He addresses this point at the timecode 1h04m20s in the recorded video.}
+Since the resolution of the Kervaire invariant one question by Hill, Hopkins, and Ravenel~\cite{HHR}, the field of equivariant homotopy theory has enjoyed a serious revitalization after a rather quiet preceding period.  There is a lot to study here, and most of it is better elucidated elsewhere, but one of the central points of the Hill--Hopkins--Ravenel program is exactly the employ of formal geometry.  Namely, one of their main tools is the moduli of formal \(\Z[\!\!\sqrt{i}]\)--modules, which are formal groups equipped with a certain \(C_8\)--action effecting multiplication by the associated powers of \(\!\!\sqrt{i}\) on the tangent space.  They take as a model for this a certain bouquet of copies of \(MU\), which selects four coordinates on a given formal group, intertwined by this action of \(\!\!\sqrt{i}\).  This approach to this problem has historical precedent: the Kervaire invariant one problem is the \(p = 2\) case of a family of prime-indexed problems, and the versions satisfying \(p \ge 5\) were simultaneously resolved by Ravenel by similar methods with formal \(A\)--modules~\cite{RavenelNonexistenceArfInvariantElts}.  This leaves one case open: the Kervaire problem at \(p = 3\) remains unresolved.  From the perspective of formal \(A\)--modules, this is somewhat predictable: at large primes, a certain governing map is \(p\)--adically continuous, but it fails to be continuous at small primes.\footnote{Behrens gave a talk at the MSRI Hot Topics session on the Kervaire problem in 2010.  He addresses this point at the timecode 1h04m20s in the recorded video.}
 
 In a different direction, the moduli of formal \(A\)--modules has been used to great effect by Salch to make computations deep into the chromatic layers~\cite{Salch}.  In essence, the theory of formal \(A\)--modules grant access to multiplicative ``height amplification'' theorems: deep knowledge of the homotopy groups of spheres at height \(2\) can yield extensive information at height \(2 \cdot 2\), for instance.  Salch's methods also promise to yield connections to the \(L\)--functions perspective described above, fitting into a larger program that describes the homotopy groups of higher-height localizations of spheres in much the way that polyzeta functions are associated to arithmetic schemes of cohomological dimension larger than \(1\).  All this is quite frustrating, then, in the face of Lawson's result that the moduli of formal \(A\)--modules does not admit a topological enrichment~\cite{LawsonRealizability}.
 
