footnote about why p-typical transformations are as they are

--- a/finite.tex
+++ b/finite.tex
@@ -654,7 +654,7 @@ The ideal \(I_d = (p, v_1, \ldots, v_{d-1})\) is invariant under the action of \
 \end{corollary}
 \begin{proof}
 \index{formal group!height}
-Recall from \Cref{KudoArakiIsomorphism} the Kudo--Araki isomorphism \[\moduli{fgl}^{\ptyp} \xrightarrow{\simeq} \Spec \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots] =: \Spec V,\] and let \(+_L\) denote the associated universal \(p\)--typical formal group law with \(p\)--series \[[p]_L(x) = px +_L v_1 x^p +_L v_2 x^{p^2} +_L \cdots +_L v_d x^{p^d} +_L \cdots.\]  Over \(\Spec V[t_1, t_2, \ldots]\), we can form a second group law \(+_R\) by conjugating \(+_L\) by the universal \(p\)--typical coordinate transformation \(g(x) = \sumfgl{L}_{j=0}^\infty t_j x^{p^j}\).  The corresponding \(p\)--series \[[p]_R(x) = \sumfgl{R}_{d=0}^\infty \eta_R(v_d) x^{p^d}\] determines the \(\eta_R\) map of the Hopf algebroid \((V, V[t_1, t_2, \ldots])\) presenting the moduli of \(p\)--typical formal group laws and \(p\)--typical isomorphisms.  We cannot hope to compute \(\eta_R(v_d)\) explicitly, but modulo \(p\) we can apply Freshman's Dream to the expansion of \[[p]_L(g(x)) = g([p]_R(x))\] to discern some information: \[\sumfgl{L}_{\substack{i \ge 0 \\ j > 0}} t_i \eta_R(v_j)^{p^i} \equiv \sumfgl{L}_{\substack{i > 0 \\ j \ge 0}} v_i t_j^{p^i} \pmod p.\]  This is still inexplicit, since \(+_L\) is a very complicated operation, but we can see \(\eta_R(v_d) \equiv v_d \pmod{I_d}\).  It follows that \(I_d\) is invariant for each \(d\).  Additionally, the closed substack this determines are those formal groups admitting local \(p\)--typical coordinates for which \(v_{\le d} = 0\), guaranteeing that the height of the associated formal group is at least \(d\).
+Recall from \Cref{KudoArakiIsomorphism} the Kudo--Araki isomorphism \[\moduli{fgl}^{\ptyp} \xrightarrow{\simeq} \Spec \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots] =: \Spec V,\] and let \(+_L\) denote the associated universal \(p\)--typical formal group law with \(p\)--series \[[p]_L(x) = px +_L v_1 x^p +_L v_2 x^{p^2} +_L \cdots +_L v_d x^{p^d} +_L \cdots.\]  Over \(\Spec V[t_1, t_2, \ldots]\), we can form a second group law \(+_R\) by conjugating \(+_L\) by the universal \(p\)--typical coordinate transformation \(g(x) = \sumfgl{L}_{j=0}^\infty t_j x^{p^j}\).\footnote{To see that the transformation \(g\) must have this form, suppose merely that it is an isomorphism of formal group laws with \(p\)--typical source and target, \(+_L\) and \(+_R\) respectively.  Since \(\sheaf O_{\moduli{fgl}^{\ptyp}}\) is a torsion-free ring, by rationalizing we may express \(g\) as the composite of the rational logarithm for \(+_L\), a possible scalar multiplication, and the rational exponential for \(+_R\).  These are each \(p\)--typical transformations by hypothesis, and since \(p\)--typicality is stable under composition, this is true of \(g\).}  The corresponding \(p\)--series \[[p]_R(x) = \sumfgl{R}_{d=0}^\infty \eta_R(v_d) x^{p^d}\] determines the \(\eta_R\) map of the Hopf algebroid \((V, V[t_1, t_2, \ldots])\) presenting the moduli of \(p\)--typical formal group laws and \(p\)--typical isomorphisms.  We cannot hope to compute \(\eta_R(v_d)\) explicitly, but modulo \(p\) we can apply Freshman's Dream to the expansion of \[[p]_L(g(x)) = g([p]_R(x))\] to discern some information: \[\sumfgl{L}_{\substack{i \ge 0 \\ j > 0}} t_i \eta_R(v_j)^{p^i} \equiv \sumfgl{L}_{\substack{i > 0 \\ j \ge 0}} v_i t_j^{p^i} \pmod p.\]  This is still inexplicit, since \(+_L\) is a very complicated operation, but we can see \(\eta_R(v_d) \equiv v_d \pmod{I_d}\).  It follows that \(I_d\) is invariant for each \(d\).  Additionally, the closed substack this determines are those formal groups admitting local \(p\)--typical coordinates for which \(v_{\le d} = 0\), guaranteeing that the height of the associated formal group is at least \(d\).
 \end{proof}
 
 \noindent What is \emph{much} harder to prove is the following:
